--- a/app/views/spree/taxons/show.html.erb
+++ b/app/views/spree/taxons/show.html.erb
@@ -24,7 +24,7 @@
           <% if taxon.children.any? %>
             <%= render partial: 'subtaxons', locals: { taxons: taxon.children } %>
           <% else %>
-            <%= render partial: 'spree/shared/products', locals: { products: taxon_preview(taxon), taxon: taxon } %>
+            <%= render partial: 'spree/shared/products', locals: { products: taxon.products, taxon: taxon } %>
           <% end %>
 
         </div>
