Cart dynamic + Flash messages partial

--- a/app/views/application/_navigation.html.erb
+++ b/app/views/application/_navigation.html.erb
@@ -1,3 +1,5 @@
+<%= render partial: 'flash_messages' %>
+
 <div class="navigations <%= "navigations--sticky" if local_assigns[:sticky] %>">
   <a href="<%= root_path %>" title="Home" class="navigations__forst-shop"></a>
   <div class="nav-languages">
