--- a/app/views/spree/orders/edit.html.erb
+++ b/app/views/spree/orders/edit.html.erb
@@ -23,10 +23,8 @@
                     <div class="row">
                       <div class="col-xs-12 table-cart__content">
                         <p>
-                          <%= Spree.t(:your_cart_is_empty) %>
-                        </p>
-                        <p>
-                          <a href="<%= continue_shopping_path %>"><%= Spree.t(:continue_shopping) %></a>
+                          <%= Spree.t(:your_cart_is_empty) %><span class="continue-shopping"><a href="<%= continue_shopping_path %>"><%= Spree.t(:continue_shopping) %></a>
+                          </span>
                         </p>
                       </div>
                     </div>
@@ -55,12 +53,11 @@
                 <div class="col-md-6">
                   <%= form_tag empty_cart_path, :method => :put do %>
                     <%= submit_tag Spree.t(:empty_cart), :class => 'btn-grey' %>
+                    <span class="continue-shopping">
+                      <i class="hidden-xs hidden-sm"><%= Spree.t(:or) %></i>
+                      <a href="<%= continue_shopping_path %>"><%= Spree.t(:continue_shopping) %></a>
+                    </span>
                   <% end %>
-
-                  <span class="continue-shopping">
-                    <i class="hidden-xs hidden-sm"><%= Spree.t(:or) %></i>
-                    <a href="<%= continue_shopping_path %>"><%= Spree.t(:continue_shopping) %></a>
-                  </span>
                 </div>
 
                 <div class="col-md-6 text-right">
