update big-footer style

--- a/app/assets/stylesheets/components/components.sass
+++ b/app/assets/stylesheets/components/components.sass
@@ -27,9 +27,11 @@
   background: $color-green-forst
   padding: 40px 0 60px 0
 
-
   +max-screen($screen-sm)
     padding: 40px 20px 60px 20px
+
+    &__menu
+      margin-bottom: 30px
 
 // END Big Footer
 
