--- a/app/views/application/_big_footer.html.erb
+++ b/app/views/application/_big_footer.html.erb
@@ -1,7 +1,7 @@
 <section class="big-footer">
   <div class="container">
     <div class="row">
-      <div class="col-sm-4">
+      <div class="big-footer__menu col-sm-4">
         <ul class="menu-list">
           <li class="title">Categorie</li>
           <li><a href="<%= shop_beers_path %>">
@@ -15,7 +15,7 @@
           </a></li>
         </ul>
       </div>
-      <div class="col-sm-4">
+      <div class="big-footer__menu col-sm-4">
         <ul class="menu-list">
           <li class="title">CONTATTI</li>
           <li><a href="http://www.forst.it/">www.forst.it</a></li>
@@ -27,7 +27,7 @@
           </li>
         </ul>
       </div>
-      <div class="col-sm-4">
+      <div class="big-footer__menu col-sm-4">
         <ul class="menu-list">
           <li class="title">SEGUICI</li>
           <li class="menu-list__social">
