--- a/app/assets/stylesheets/components/menu-list.sass
+++ b/app/assets/stylesheets/components/menu-list.sass
@@ -36,6 +36,9 @@
     line-height: 1.2
     margin-bottom: 12px
 
+    +max-screen($screen-sm)
+      margin-bottom: 2px
+
   li
     color: #FFF
     font-size: 16px
