--- a/app/views/application/_responsive_menu.html.erb
+++ b/app/views/application/_responsive_menu.html.erb
@@ -1,3 +1,5 @@
+<%= render partial: 'flash_messages' %>
+
 <div class="navigation js_navigation_container">
   <div class="js-nav-toggler">
     <a class="navigation-toggler" href="#">
