--- a/app/assets/stylesheets/components/components.sass
+++ b/app/assets/stylesheets/components/components.sass
@@ -13,6 +13,8 @@
 @import table-cart
 @import entry-page
 @import flash-messages
+@import checkout
+@import step1
 
 // Nav Languages
 .nav-languages
