--- a/app/assets/stylesheets/components/entry-page.sass
+++ b/app/assets/stylesheets/components/entry-page.sass
@@ -104,7 +104,7 @@
         display: inline-block
         width: 110px
         height: 110px
-        background: #46521b
+        background: $color-green-forst
         margin: 0px 18px
 
         a
