--- a/app/assets/stylesheets/components/product-merchandising.sass
+++ b/app/assets/stylesheets/components/product-merchandising.sass
@@ -7,8 +7,8 @@
 
     &:nth-child(2n)
       border: 0px
-      border-top: 1px solid #dad8ca
-      border-bottom: 1px solid #dad8ca
+      // border-top: 1px solid #dad8ca
+      // border-bottom: 1px solid #dad8ca
 
 .catalog-merchandising
   position: relative
