style 2° step cart (delivery)

--- a/app/assets/stylesheets/components/checkout.sass
+++ b/app/assets/stylesheets/components/checkout.sass
@@ -43,6 +43,25 @@
         color: $color-green-forst
         font-weight: bold
 
+  .form-buttons
+    input[type=submit]
+      vertical-align: top
+      background: $color-green-forst
+      color: #FFF
+      font-weight: 600
+      text-transform: uppercase
+      text-align: center
+      border: 0
+      font-size: 18px
+      padding: 15px 24px
+
+    .save-address
+      line-height: 57px
+
+    +max-screen($screen-sm)
+      &
+        text-align: center
+
 #checkout-summary
   h3
     font-size: 24px
