style registration page

--- a/app/assets/stylesheets/components/components.sass
+++ b/app/assets/stylesheets/components/components.sass
@@ -13,6 +13,7 @@
 @import table-cart
 @import entry-page
 @import flash-messages
+@import registration
 @import checkout
 @import step1
 @import step2
