--- a/app/views/spree/products/_image.html.erb
+++ b/app/views/spree/products/_image.html.erb
@@ -1,5 +1,5 @@
 <% if defined?(image) && image %>
-  <%= image_tag image.attachment.url(:product), itemprop: "image" %>
+  <%= image_tag image.attachment.url(:large), itemprop: "image" %>
 <% else %>
-  <%= image_tag @product.display_image.attachment(:product), itemprop: "image" %>
+  <%= image_tag @product.display_image.attachment(:large), itemprop: "image" %>
 <% end %>
