update img attachment size for the grainy image

--- a/app/views/spree/shared/_products.html.erb
+++ b/app/views/spree/shared/_products.html.erb
@@ -8,7 +8,7 @@
           <a class="product-catalog-wrapper" href="<%= spree.product_path(product, taxon_id: @taxon.try(:id)) %>">
             <div id="product_<%= product.id %>" class="product-catalog" data-hook="products_list_item" itemscope itemtype="http://schema.org/Product">
               <div class="product-catalog__image">
-                <%= image_tag(product.display_image.attachment(:small), itemprop: "image") %>
+                <%= image_tag(product.display_image.attachment(:large), itemprop: "image") %>
               </div>
               <div class="product-catalog__name">
                 <p><%= truncate(product.name, length: 50) %></p>
