--- a/app/views/application/_big_footer.html.erb
+++ b/app/views/application/_big_footer.html.erb
@@ -3,23 +3,28 @@
     <div class="row">
       <div class="big-footer__menu col-sm-4">
         <ul class="menu-list">
-          <li class="title">Categorie</li>
-          <li><a href="<%= shop_beers_path %>">
-            Le nostre birre
-          </a></li>
-          <li><a href="<%= shop_merchandising_path %>">
-            Il merchandising
-          </a></li>
-          <li><a href="<%= shop_christmas_beer_path %>">
-            La birra di Natale
-          </a></li>
+          <li class="title"><%= Spree.t('big_footer.categories') %></li>
+          <li>
+            <%= link_to Spree.t('big_footer.our_beers'), shop_beers_path %>
+          </li>
+          <li>
+            <%= link_to Spree.t('big_footer.merchandising'), shop_merchandising_path %>
+          </li>
+          <li>
+            <%= link_to Spree.t('big_footer.christmas_beer'), shop_christmas_beer_path %>
+          </li>
         </ul>
       </div>
       <div class="big-footer__menu col-sm-4">
         <ul class="menu-list">
-          <li class="title">CONTATTI</li>
-          <li><a href="http://www.forst.it/">www.forst.it</a></li>
-          <li><a href="mailto:shop@forst.it">shop@forst.it</a></li>
+          <li class="title"><%= Spree.t('big_footer.contacts') %></li>
+          <li>
+            <a href="http://www.forst.it/"></a>
+            <%= link_to Spree.t('big_footer.website'), "http://www.forst.it/" %>
+          </li>
+          <li>
+            <%= link_to Spree.t('big_footer.mail'), "mailto:shop@forst.it" %>
+          </li>
           <li>+39 0473 260 360</li>
           <li>
             <br /> Via Venosta, 11
@@ -29,7 +34,7 @@
       </div>
       <div class="big-footer__menu col-sm-4">
         <ul class="menu-list">
-          <li class="title">SEGUICI</li>
+          <li class="title"><%= Spree.t('big_footer.follow_us') %></li>
           <li class="menu-list__social">
             <a href="#"><i class="fa fa-facebook"></i></a>
             <a href="#"><i class="fa fa-youtube"></i></a>
