Translation in taxons page

--- a/app/views/spree/taxons/_subtaxons.html.erb
+++ b/app/views/spree/taxons/_subtaxons.html.erb
@@ -11,7 +11,9 @@
             <p><%= taxon.name %></p>
           </div>
           <div class="product-merchandising__discover">
-            <a href="<%= spree.nested_taxons_path(taxon) %>" class="button">Scopri i prodotti</a>
+            <a href="<%= spree.nested_taxons_path(taxon) %>" class="button">
+              <%= Spree.t('taxons.see_products') %>
+            </a>
           </div>
         </div>
       </div>
