Last HP translation

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -40,10 +40,10 @@
               <img class="section-box__image" src="<%= image_path 'home/coming-soon.png' %>" alt="" />
               <!-- <div class="section-box__content">
                 <img class="section-box__icon" src="<%= image_path 'home/box-birre-icon.png' %>" alt="" />
-                <h1 class="section-box__title">Le nostre birre</h1>
+                <h1 class="section-box__title"><%= Spree.t('home.boxes.our_beers') %></h1>
               </div>-->
             <!-- </a> -->
-          </div>
+              </div>
           <!-- // Section-box -->
         </div>
         <div class="col-sm-4 col-md-4">
