Dynamicise "coming-soon" box in HP with overlayer

--- a/app/assets/stylesheets/components/section-boxes.sass
+++ b/app/assets/stylesheets/components/section-boxes.sass
@@ -53,4 +53,17 @@
     +min-screen($screen-lg)
       font-size: 42px
 
+  &__coming-soon-overlay
+    background-image: url(asset-path("home/coming-soon.png"))
+    background-color: rgba(255,255,255,.6)
+    background-repeat: no-repeat
+    background-position: right 8px top 8px
+    background-size: 40%
+    position: absolute
+    left: 0
+    top: 0
+    width: 100%
+    height: 100%
+    z-index: 100
+
 // END Section Box
