--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -36,14 +36,15 @@
         <div class="col-sm-4 col-md-4">
           <!-- Section-box -->
           <div class="section-box">
-            <!-- <a class="section-box__link" href="<%= shop_beers_path %>" title="Le nostre birre"> -->
-              <img class="section-box__image" src="<%= image_path 'home/coming-soon.png' %>" alt="" />
-              <!-- <div class="section-box__content">
+            <a class="section-box__link" href="<%= shop_beers_path %>" title="Le nostre birre">
+              <img class="section-box__image" src="<%= image_path 'home/box-birre-background.png' %>" alt="" />
+              <div class="section-box__content">
                 <img class="section-box__icon" src="<%= image_path 'home/box-birre-icon.png' %>" alt="" />
                 <h1 class="section-box__title"><%= Spree.t('home.boxes.our_beers') %></h1>
-              </div>-->
-            <!-- </a> -->
               </div>
+            </a>
+            <div class="section-box__coming-soon-overlay"></div>
+          </div>
           <!-- // Section-box -->
         </div>
         <div class="col-sm-4 col-md-4">
