Forbidden message - Underage control

--- a/app/views/pages/forbidden.html.erb
+++ b/app/views/pages/forbidden.html.erb
@@ -33,7 +33,7 @@
               <div class="entry-page__box">
 
                 <div class="entry-page__box__title">
-                  <h3><%= Spree.t('underage.forbidden_message') %></h3>
+                  <h3><%= Spree.t('underage.forbidden_message').html_safe %></h3>
                 </div>
 
                 <div class="entry-page__box__disclaimer">
