--- a/app/views/pages/forbidden.html.erb
+++ b/app/views/pages/forbidden.html.erb
@@ -9,7 +9,7 @@
       <div class="col-md-12">
         <div class="entry-page__navigation">
           <ul class="entry-page__navigation__list">
-            <% [:it, :de, :en].each do |lang| %>
+            <% I18n.available_locales.each do |lang| %>
               <li class="<%= 'active' if I18n.locale == lang %>">
                 <%= link_to Spree.t(:"locale_#{lang}"), url_for(locale: lang) %>
               </li>
