--- a/app/assets/stylesheets/components/step4.sass
+++ b/app/assets/stylesheets/components/step4.sass
@@ -42,7 +42,13 @@
             .full-name
               display: none
 
-    +max-screen($screen-md)
+    #line-items
+      .table-cart__body
+        .table-cart__content.title-description
+          h1
+            font-size: 16px
+
+    +max-screen($screen-sm)
       #line-items
         .table-cart__body
           .table-cart__content.image
@@ -82,11 +88,19 @@
     .total-product-cart
       #shipment-total,
       #order-total
-        padding: 10px 0 10px 20px
+        padding: 10px 0 0px 0px
 
         .label, .total
           display: inline-block
-          margin-left: 7px
+
+      #tax-adjustments
+        .total
+          padding: 10px 0 0px 0px
+
+          .label, .total
+            display: inline-block
+
+
 
       #order-total
         .total
