fix last step of cart

--- a/app/views/spree/checkout/edit.html.erb
+++ b/app/views/spree/checkout/edit.html.erb
@@ -28,7 +28,7 @@
                         <div class="customer-email" style='clear: both'>
                           <%= form.label :email %>
                           <%= form.text_field :email %>
-                        </p>
+                        </div>
                       <% end %>
                       <%= render @order.state, :form => form %>
                     <% end %>
