--- a/app/assets/stylesheets/components/navigation.sass
+++ b/app/assets/stylesheets/components/navigation.sass
@@ -172,8 +172,7 @@
         display: none
 
       li
-        &:nth-child(2)
-          &::after,
+        &:last-child
           &::before
             display: block
             content: "-"
