--- a/app/assets/stylesheets/components/entry-page.sass
+++ b/app/assets/stylesheets/components/entry-page.sass
@@ -37,8 +37,7 @@
         list-style: none
         display: inline-block
 
-        &:nth-child(2)
-          &::after,
+        &:last-child
           &::before
             display: block
             content: "-"
@@ -121,8 +120,7 @@
         display: inline-block
 
         +min-screen($screen-md)
-          &:nth-child(2)
-            &::after,
+          &:last-child
             &::before
               display: block
               content: "|"
