--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -3,26 +3,8 @@
 
     <% if @product.variants_and_option_values(current_currency).any? %>
       <div id="product-variants" class="columns five alpha">
-        <h6 class="product-section-title"><%= Spree.t(:variants) %></h6>
-        <ul>
-          <% @product.variants_and_option_values(current_currency).each_with_index do |variant, index| %>
-            <li>
-              <%= radio_button_tag "variant_id", variant.id, index == 0, 'data-price' => variant.price_in(current_currency).money  %>
-              <%= label_tag "variant_id_#{ variant.id }" do %>
-                <span class="variant-description">
-                  <%= variant_options variant %>
-                </span>
-                <% if variant_price variant %>
-                  <span class="price diff"><%= variant_price variant %></span>
-                <% end %>
-
-                <% unless variant.can_supply? %>
-                  <span class="out-of-stock"><%= Spree.t(:out_of_stock) %></span>
-                <% end %>
-              <% end %>
-            </li>
-          <% end%>
-        </ul>
+        <h2 class="product-details__subtitle"><%= Spree.t(:variants) %></h2>
+        <%=  render partial: 'variants', locals: { product: @product } %>
       </div>
     <% else %>
       <%= hidden_field_tag "variant_id", @product.master.id %>
@@ -31,7 +13,7 @@
     <% if @product.price_in(current_currency) and !@product.price.nil? %>
       <div data-hook="product_price" class="columns five <% if !@product.has_variants? %> alpha <% else %> omega <% end %>">
       <div id="product-price">
-          <p class="product-details__price"><%= display_price(@product) %></p>
+          <p class="product-details__price js-product-price"><%= display_price(@product) %></p>
           <span itemprop="priceCurrency" content="<%= @product.currency %>"></span>
           <div class="product-details__selector product-details__selector--inline">
             <%= number_field_tag :quantity, 1, :class => 'product-details__stepper', :min => 1 %>
