--- a/app/assets/stylesheets/components/entry-page.sass
+++ b/app/assets/stylesheets/components/entry-page.sass
@@ -99,43 +99,50 @@
 
     &__choose
       margin-bottom: 50px
-      li
-        display: inline-block
-        width: 110px
-        height: 110px
-        background: $color-green-forst
-        margin: 0px 18px
 
-        a
-          font-weight: 500
-          text-align: center
-          line-height: 110px
-          font-size: 50px
-          color: #fff
-          text-transform: uppercase
-          text-decoration: none
+      ul
+        padding-left: 0px
+
+        li
+          display: inline-block
+          width: 110px
+          height: 110px
+          background: $color-green-forst
+          margin: 0px 18px
+
+          a
+            font-weight: 500
+            text-align: center
+            line-height: 110px
+            font-size: 50px
+            color: #fff
+            text-transform: uppercase
+            text-decoration: none
 
     &__disclaimer
-      li
-        display: inline-block
+      ul
+        padding-left: 0px
 
-        +min-screen($screen-md)
-          &:last-child
-            &::before
+        li
+          display: inline-block
+
+          +min-screen($screen-md)
+            &:last-child
+              &::before
+                display: block
+                content: "|"
+                margin: 0px 4px
+                display: inline-block
+                color: #c9cbcb
+
+          +max-screen($screen-sm)
+            &
               display: block
-              content: "|"
-              margin: 0px 4px
-              display: inline-block
-              color: #c9cbcb
 
-        +max-screen($screen-sm)
-          &
-            display: block
-
-        a
-          font-size: 14px
-          font-weight: 100
-          text-decoration: none
+          a
+            font-size: 14px
+            font-weight: 100
+            text-decoration: none
 
   .wrapper-entry-page
     position: absolute
