fix border bottom product merchandising (mobile)

--- a/app/views/spree/taxons/_subtaxons.html.erb
+++ b/app/views/spree/taxons/_subtaxons.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
 
     <% taxons.each do |taxon| %>
-      <div class="col-md-4 col-sm-4">
+      <div class="col-md-4 col-sm-4 merchandising-row">
         <div class="product-merchandising <%= cycle('first', 'middle', 'last') %>">
           <div class="product-merchandising__image">
             <img src="<%= taxon.icon.url(:big) %>" alt="<%= taxon.name %>">
