--- a/app/assets/stylesheets/components/product-details.sass
+++ b/app/assets/stylesheets/components/product-details.sass
@@ -87,14 +87,28 @@
 
       h3
         font-weight: 400
+        font-size: 15px
         margin: 0
-        padding: 8px 12px
+        padding: 4px 12px
         border: 0
         display: table-cell
-        width: 30%
       p
         margin: 0
-        padding: 8px 12px
+        font-size: 15px
+        padding: 4px 12px
         border: 0
         display: table-cell
-        width: 69%
+
+
+// bootstrap margin fix
+.product-description
+  .row.description,
+  .row.attributes
+    margin-left: 0px
+    margin-right: 0px
+
++max-screen($screen-sm)
+  .product-description
+    .row.attributes
+      margin-left: -15px
+      margin-right: -15px
