background image on merchandising

--- a/app/assets/stylesheets/components/product-merchandising.sass
+++ b/app/assets/stylesheets/components/product-merchandising.sass
@@ -46,11 +46,15 @@
     border-right: 0px
 
   &__image
-    padding: 10px 0px
+    width: 200px;
+    height: 200px;
+    margin: 0 auto;
+    border: 1px solid #bbb;
+    background: #fff;
 
     img
-      height: 200px
-      width: auto
+      height: 100%
+      width: 100%
 
   &__name
     p
