update style and structure home page for 2 boxes

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,13 +18,13 @@
       </div>
     </div>
     <!-- Boxes -->
-    <div class="section-boxes">
-      <div class="row">
-        <div class="col-sm-4 col-md-4">
+    <div class="row">
+      <div class="section-boxes">
+        <div class="col-sm-6 col-md-6">
           <!-- Section-box -->
           <div class="section-box">
             <a class="section-box__link" href="<%= shop_merchandising_path %>" title="Il merchandising">
-              <img class="section-box__image" src="<%= image_path 'home/box-merchandising-background.png' %>" alt="" />
+              <img class="section-box__image" src="<%= image_path 'home/box-merchandising-background.jpg' %>" alt="" />
               <div class="section-box__content">
                 <img class="section-box__icon" src="<%= image_path 'home/box-merchandising-icon.png' %>" alt="" />
                 <h1 class="section-box__title"><%= Spree.t('home.boxes.merchandising') %></h1>
@@ -33,11 +33,11 @@
           </div>
           <!-- // Section-box -->
         </div>
-        <div class="col-sm-4 col-md-4">
+        <div class="col-sm-6 col-md-6">
           <!-- Section-box -->
           <div class="section-box">
             <a class="section-box__link" href="<%= shop_beers_path %>" title="Le nostre birre">
-              <img class="section-box__image" src="<%= image_path 'home/box-birre-background.png' %>" alt="" />
+              <img class="section-box__image" src="<%= image_path 'home/box-birre-background.jpg' %>" alt="" />
               <div class="section-box__content">
                 <img class="section-box__icon" src="<%= image_path 'home/box-birre-icon.png' %>" alt="" />
                 <h1 class="section-box__title"><%= Spree.t('home.boxes.our_beers') %></h1>
@@ -47,21 +47,9 @@
           </div>
           <!-- // Section-box -->
         </div>
-        <div class="col-sm-4 col-md-4">
-          <!-- Section-box -->
-          <div class="section-box">
-            <a class="section-box__link" href="<%= shop_christmas_beer_path %>" title="<%= Spree.t('home.boxes.christmas_beer') %>">
-              <img class="section-box__image" src="<%= image_path 'home/box-birra-natale-background.png' %>" alt="" />
-              <div class="section-box__content">
-                <img class="section-box__icon" src="<%= image_path 'home/box-birra-natale-icon.png' %>" alt="" />
-                <h1 class="section-box__title"><%= Spree.t('home.boxes.christmas_beer') %></h1>
-              </div>
-            </a>
-          </div>
-          <!-- // Section-box -->
-        </div>
       </div>
     </div>
+
     <!-- // Boxes -->
   </div>
   <div class="banner-product">
