--- a/app/assets/stylesheets/components/section-boxes.sass
+++ b/app/assets/stylesheets/components/section-boxes.sass
@@ -1,25 +1,23 @@
 // Section Box
 .section-boxes
-  padding: 8px
+  padding: 10px 0px
 
 .section-box
   position: relative
   overflow: hidden
+  padding: 0px 6px
 
   &__content
     font-size: 62.5%
     text-align: center
     position: absolute
     width: 100%
-    top: 28%
+    top: 18%
     z-index: 2
 
   &__link
-    width: 100%
-    height: 100%
-    left: 0
-    top: 0
     display: block
+    padding: 0px
 
     &:hover
       .section-box__icon
@@ -27,14 +25,13 @@
 
   &__icon
     +transition(all .2s ease-out)
-    width: 16%
+    width: 13%
 
   &__image
     position: relative
     width: 100%
-    padding: 8px
+    // padding: 8px
     z-index: 1
-
 
   &__title
     font-size: 30px
@@ -61,9 +58,9 @@
     background-size: 40%
     position: absolute
     left: 0
-    top: 0
+    top: -8px
     width: 100%
-    height: 100%
+    height: 101%
     z-index: 100
 
 // END Section Box
