--- a/app/views/application/_responsive_menu.html.erb
+++ b/app/views/application/_responsive_menu.html.erb
@@ -34,7 +34,7 @@
       <%= link_to Spree.t('menu.contacts'), '#' %>
     </li>
     <li>
-      <%= link_to Spree.t('menu.privacy'), '#' %>
+      <%= link_to Spree.t('menu.privacy'), privacy_path %>
     </li>
     <li>
       <%= link_to Spree.t('menu.sales_conditions'), '#' %>
