Add sales conditions - rough version

--- a/app/views/application/_responsive_menu.html.erb
+++ b/app/views/application/_responsive_menu.html.erb
@@ -37,7 +37,7 @@
       <%= link_to Spree.t('menu.privacy'), privacy_path %>
     </li>
     <li>
-      <%= link_to Spree.t('menu.sales_conditions'), '#' %>
+      <%= link_to Spree.t('menu.sales_conditions'), sales_conditions_path %>
     </li>
   </ul>
 </div>
