--- a/app/views/pages/contacts.html.erb
+++ b/app/views/pages/contacts.html.erb
@@ -5,11 +5,8 @@
         <%= render partial: "navigation", locals: { sticky: true } %>
 
         <div class="contacts">
-          <h2 class="contacts__title">Contatti</h2>
-          <h3 class="contacts__subtitle">
-            Se vuoi saperne più su di noi, hai domande o ti serve aiuto sentiti libero di contattarci.<br />
-            Ci piacerebbe molto conoscerti!
-          </h3>
+          <h2 class="contacts__title"><%= Spree.t('contacts.title') %></h2>
+          <h3 class="contacts__subtitle"><%= Spree.t('contacts.subtitle') %></h3>
           <img data-fit="true" data-align="top center" class="coverized contacts__background" src="<%= image_path 'contacts/contacts.jpg' %>" alt="">
         </div>
 
@@ -22,7 +19,7 @@
 
                   <div class="contacts-info address">
                     <a href="https://goo.gl/maps/M73bdNeaJB52" target="_blank">
-                    <i class="icon-pin"></i>Birra Forst Via Venosta, 11 39022 Forst/Lagundo (BZ)</a>
+                    <i class="icon-pin"></i><%= Spree.t('contacts.address_contacts') %></a>
                   </div>
 
                   <div class="contacts-info mail">
