--- a/app/assets/stylesheets/components/footer.sass
+++ b/app/assets/stylesheets/components/footer.sass
@@ -51,7 +51,7 @@
         width: 1px
         height: 15px
         top: 6px
-        position: absolute
+        // position: absolute
         margin-left: 6px
 
         +max-screen($screen-sm)
