--- a/app/views/application/_responsive_menu.html.erb
+++ b/app/views/application/_responsive_menu.html.erb
@@ -31,7 +31,7 @@
   </ul>
   <ul class="navigation__secondary-menu">
     <li>
-      <%= link_to Spree.t('menu.contacts'), contacts_path %>
+      <%= link_to Spree.t('menu.contacts'), patched_route_path(:contacts) %>
     </li>
     <li>
       <%= link_to Spree.t('menu.privacy'), patched_route_path(:privacy) %>
