Remove coming soon layer on beers

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -43,7 +43,9 @@
                 <h1 class="section-box__title"><%= Spree.t('home.boxes.our_beers') %></h1>
               </div>
             </a>
+            <!-- // Coming-soon overlay
             <div class="section-box__coming-soon-overlay"></div>
+             // Coming-soon overlay -->
           </div>
           <!-- // Section-box -->
         </div>
