New banner product

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -64,7 +64,7 @@
       <p class="banner-product__description">
         <%= Spree.t('home.banner_product.description_html') %>
       </p>
-      <a href="<%= shop_christmas_beer_path %>" class="btn-follow"><%= Spree.t('home.banner_product.call_to_action') %></a>
+      <a href="<%= shop_merchandising_path('glasses') %>" class="btn-follow"><%= Spree.t('home.banner_product.call_to_action') %></a>
     </div>
   </div>
   <%= render partial: "big_footer" %>
