Hide checkout product description - Update Gemfile.lock

--- a/app/assets/stylesheets/components/table-cart.sass
+++ b/app/assets/stylesheets/components/table-cart.sass
@@ -29,6 +29,9 @@
       +max-screen($screen-md)
         margin: 10px 20px
 
+      p
+        display: none
+
     h4
       margin: 0
       padding: 0
