solved translation issues in underage confirmation form

--- a/app/views/pages/underage.html.erb
+++ b/app/views/pages/underage.html.erb
@@ -40,10 +40,10 @@
                 <div class="entry-page__box__choose">
                   <ul>
                     <li>
-                      <%= link_to Spree.t('menu.underage.yes'), yes_answer_path %>
+                      <%= link_to Spree.t('underage.affirmative'), yes_answer_path %>
                     </li>
                     <li>
-                      <%= link_to Spree.t('menu.underage.no'), no_answer_path %>
+                      <%= link_to Spree.t('underage.negative'), no_answer_path %>
                     </li>
                   </ul>
                 </div>
