--- a/app/views/application/_box_disclaimer.html.erb
+++ b/app/views/application/_box_disclaimer.html.erb
@@ -1,13 +1,13 @@
 <div class="entry-page__box__disclaimer">
   <ul>
     <li>
-      <%= link_to Spree.t('menu.underage.responsible_consumption'), 'http://www.beviresponsabile.it/', target: :blank %>
+      <%= link_to Spree.t('underage.responsible_consumption'), 'http://www.beviresponsabile.it/', target: :blank %>
     </li>
     <li>
-      <%= link_to Spree.t('menu.underage.privacy'), privacy_path %>
+      <%= link_to Spree.t('underage.privacy'), privacy_path %>
     </li>
     <li>
-      <%= link_to Spree.t('menu.underage.sales_conditions'), sales_conditions_path %>
+      <%= link_to Spree.t('underage.sales_conditions'), sales_conditions_path %>
     </li>
   </ul>
 </div>
