some translation bugfixes

--- a/app/views/application/_big_footer.html.erb
+++ b/app/views/application/_big_footer.html.erb
@@ -24,8 +24,7 @@
           </li>
           <li>+39 0473 260 360</li>
           <li>
-            <br /> Via Venosta, 11
-            <br /> 39022 Forst/Lagundo (BZ)
+            <br/><%=Spree.t('big_footer.address_html') %>
           </li>
         </ul>
       </div>
