--- a/app/views/spree/products/index.html.erb
+++ b/app/views/spree/products/index.html.erb
@@ -5,7 +5,7 @@
         <%= render partial: "navigation", locals: { sticky: true } %>
 
         <div class="catalog-beer">
-          <h2 class="catalog-beer__title">Products</h2>
+          <h2 class="catalog-beer__title"><%= Spree.t('menu.products') %></h2>
           <img data-fit="true" data-align="top center" class="coverized catalog-beer__background" src="<%= image_path 'catalog_beer/catalog_beer_splash.jpg' %>" alt="">
         </div>
 
