--- a/app/views/application/_responsive_menu.html.erb
+++ b/app/views/application/_responsive_menu.html.erb
@@ -21,7 +21,7 @@
           <%= link_to Spree.t('menu.glasses'), shop_merchandising_path(:glasses) %>
         </li>
         <li>
-          <%= link_to Spree.t('menu.clothes'), shop_merchandising_path(:clothes) %>
+          <%= link_to Spree.t('menu.clothing'), shop_merchandising_path(:clothing) %>
         </li>
         <li>
           <%= link_to Spree.t('menu.accessories'), shop_merchandising_path(:accessories) %>
