--- a/app/views/application/_navigation.html.erb
+++ b/app/views/application/_navigation.html.erb
@@ -18,7 +18,7 @@
     <a href="<%= spree.cart_path %>">
       <i class="icon-cart"></i>
     </a>
-    <span class="js-inject-link-to-cart"></span>
+    <span><%= link_to_cart %></span>
   </div>
   <div class="js-nav-toggler">
     <a class="navigation-toggler" href="#">
