resize pic in small screen

--- a/app/assets/stylesheets/components/table-cart.sass
+++ b/app/assets/stylesheets/components/table-cart.sass
@@ -18,10 +18,11 @@
       position: absolute
 
       +max-screen($screen-md)
-        width: 100%
+        width: 170px
         position: relative
         display: block
         padding: 20px 10px
+        margin: auto
 
     &__text
       margin-left: 120px
