cart visible in responsive in small screens

--- a/app/views/application/_responsive_menu.html.erb
+++ b/app/views/application/_responsive_menu.html.erb
@@ -7,7 +7,7 @@
     </a>
   </div>
   <ul class="navigation__primary-menu">
-    <li class="visible-xs js-inject-link-to-cart"></li>
+    <li class="visible-xs"><%= link_to_cart %></li>
     <li>
       <%= link_to Spree.t('menu.forst_shop'), root_path %>
     </li>
