--- a/app/assets/stylesheets/components/product-images.sass
+++ b/app/assets/stylesheets/components/product-images.sass
@@ -5,6 +5,7 @@
       border: 1px solid #e6e6e6
       width: 100%
       display: block
+      background-color: white
 
 ul.thumbnails
   margin: 20px 0 0 0
