--- a/app/views/spree/checkout/_address.html.erb
+++ b/app/views/spree/checkout/_address.html.erb
@@ -11,7 +11,7 @@
   <h2 align="center"><%= Spree.t(:shipping_address) %></h2>
   <fieldset id="shipping" data-hook>
     <%= form.fields_for :ship_address do |ship_form| %>
-      <div class="field col-md-12 addree checkbox" data-hook="use_billing">
+      <div class="field col-md-12 addree checkbox js-use-billing-checkbox" data-hook="use_billing">
         <%= check_box_tag 'order[use_billing]', '1', @order.shipping_eq_billing_address? %>
         <%= label_tag :order_use_billing, Spree.t(:use_billing_address), :id => 'use_billing' %>
       </div>
