--- a/app/views/spree/products/show.html.erb
+++ b/app/views/spree/products/show.html.erb
@@ -35,6 +35,8 @@
         </div>
       </div>
       <div class="product-description">
+      <br/>
+      <hr width="100%">
         <div class="row description">
           <div class="col-md-12">
             <h2 class="product-details__subtitle"><%= Spree.t(:description) %></h2>
