Fix unknown flashmessage

--- a/app/assets/stylesheets/components/flash-messages.sass
+++ b/app/assets/stylesheets/components/flash-messages.sass
@@ -18,7 +18,7 @@
       border-color: #bce8f1
       color: #31708f
 
-    &--success
+    &--success, &--notice
       background-color: #dff0d8
       border-color: #d6e9c6
       color: #3c763d
