--- a/app/views/application/_flash_messages.html.erb
+++ b/app/views/application/_flash_messages.html.erb
@@ -1,9 +1,10 @@
 <% if flash.any? %>
   <div class="flash-messages">
     <% flash.each do |key, value| %>
+      <% next unless value.is_a? String %>
       <div class="flash-messages__message flash-messages__message--<%= key %>">
         <%= value %>
       </div>
     <% end %>
   </div>
-<% end%>
+<% end %>
