Add payment messaging

--- a/app/assets/stylesheets/components/checkout.sass
+++ b/app/assets/stylesheets/components/checkout.sass
@@ -92,3 +92,8 @@
 #payment-methods .field-credit-card
   padding-left: 10px
   padding-right: 60px
+
+#payment-method-fields
+  margin-top: 40px
+  .list-payment-method
+    display: none
